--- a/functions/package.json
+++ b/functions/package.json
@@ -8,8 +8,10 @@
     "debug": "~2.6.9",
     "ejs": "^2.5.7",
     "express": "~4.15.5",
+    "firebase": "^4.8.2",
     "firebase-admin": "~4.2.1",
     "firebase-functions": "^0.5.7",
+    "firebaseui": "^2.5.1",
     "hbs": "~4.0.1",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
