--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "miparroquiaweb",
-  "version": "0.0.0",
+  "name": "miparroquia",
+  "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
   "dependencies": {
-    "body-parser": "~1.18.2",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "express": "~4.15.5",
-    "hbs": "~4.0.1",
-    "morgan": "~1.9.0",
-    "serve-favicon": "~2.4.5"
+    "@material-ui/icons": "^1.0.0-beta.42",
+    "firebase": "^4.12.1",
+    "material-ui": "^1.0.0-beta.41",
+    "react": "16.3.1",
+    "react-dom": "16.3.1",
+    "react-parallax": "^1.6.2",
+    "react-router-dom": "4.2.2",
+    "react-scripts": "1.1.4",
+    "typeface-roboto": "0.0.54"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "deploy": "react-scripts build; firebase deploy"
   }
 }
