--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/icons": "^1.0.0-beta.42",
     "firebase": "^4.12.1",
     "material-ui": "^1.0.0-beta.41",
+    "re-base": "^3.2.2",
     "react": "16.3.1",
     "react-dom": "16.3.1",
     "react-parallax": "^1.6.2",
